# RC_02

./: .copilot_debug_config.txt  .copilot_debug_rc_main_latest.txt  .copilot_debug_rod_c.txt  .copilot_debug_rod_h.txt  .copilot_debug_rod_main.txt  .mxproject  CMakeLists.txt  RC_02.ioc  STM32F407XX_FLASH.ld  STM32H723XG_FLASH.ld  copilot-instructions.md  temp.txt
.claude/: settings.local.json
.codex_tmp/: bird_piastudy.mid  bird_piastudy_1xScLNTSXwW.html  bird_piastudy_HenrimPd.html  bird_piastudy_HenuO2o1.html  bird_piastudy_Heo2x9hl.html  bird_piastudy_space.json  birthday_21sk1T30094.html  birthday_21sk1T30094.mid  birthday_21sk1T30094_detail.html  birthday_21sk1T30094_space.json  birthday_HemBGKHd.html  birthday_HemBGKHd_detail.html  birthday_search_1.html  birthday_search_2.html  compare_midi_space_pitch.mjs  croatian_1hLQ3PQj04n.html  croatian_1hLQ3PQj04n.mid  croatian_1hLQ3PQj04n_space.json  croatian_1wEHUUIhK6q.html  croatian_1wEHUUIhK6q.mid  croatian_1wEHUUIhK6q_space.json  croatian_midi_probe.inc  croatian_search_1.html  croatian_search_2.html  croatian_search_en_1.html  croatian_search_en_2.html  croatian_space_probe.inc  download_piastudy_search_pages.mjs  (+151 more)
matlab_sim/assets/urdf/armurdf_standard_motor/: package.xml
matlab_sim/assets/urdf/armurdf_standard_motor/config/: joint_names_armurdf.yaml
matlab_sim/assets/urdf/armurdf_standard_motor/launch/: gazebo.launch
matlab_sim/assets/urdf/armurdf_standard_motor/meshes/: Link3.STL
matlab_sim/assets/urdf/armurdf_standard_motor/urdf/: armurdf_standard_motor.urdf  armurdf_standard_motor_matlab.urdf
(+655 files in other folders)
