<?xml version="1.0"?>
<package format="2">
  <name>armurdf_standard_motor</name>
  <version>1.0.0</version>
  <description>
    URDF description package for armurdf with standard motor masses.
  </description>
  <author name="Lenovo"></author>
  <maintainer email="Lenovo@todo.todo">Lenovo</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>gazebo</depend>

  <export>
    <architecture_independent />
  </export>
</package>
